--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <script src="https://raw.githack.com/Arza-3d/ar3.js/master/modular/table-JSON/ar3-JSON-table-full-1.js"></script>
     <script src="https://raw.githack.com/Arza-3d/ar3.js/master/modular/table-filter/ar3-table-filter-1.js"></script>
 
-    <!-- TEST TEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEST nanti diapus
+    <!-- TEST TEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEST nanti diapus -->
     <script type="text/python">
       let str = "Hello world!";
       let resultTest = str.anchor();
